IE header fix and blog page spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -16,6 +16,7 @@
 .navbar-inner {
    background-color: #2D2D2D;
    background-image: none; 
+   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333',    endColorstr='#222222', GradientType=0);}
 }
 
 .navbar .brand {
@@ -57,7 +58,9 @@
    Content
    ========================================================================== */
 
-.content { }
+.content hr {
+   margin-bottom: 30px;
+}
 
 
 
